Optimize About Section Animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>يونس الرحبي - كاتب عربي</title>
+    <title>يونس الرحبي</title>
     <meta name="title" content="يونس الرحبي" />
     <meta name="description" content="الدكتور يونس بن مرهون الرحبي - كاتب ومفكر عربي متخصص في الإدارة التربوية والتنمية الذاتية. اكتشف كتبه وأعماله المميزة." />
     
